Fix favorite subreddit wrapping.

--- a/reddit_about/public/static/css/about.less
+++ b/reddit_about/public/static/css/about.less
@@ -715,16 +715,13 @@
             margin-top: .75em;
             opacity: .75;
 
-            span {
-                white-space: nowrap;
-            }
-
             ul {
                 display: inline;
+                margin-left: .5em;
 
                 li {
-                    display: inline;
-                    margin-left: .5em;
+                    display: inline-block;
+                    margin-right: .5em;
                 }
             }
         }
